<resources>
    <string name="app_name">aula04certa</string>
    <string name="nome">Name</string>
    <string name="telefone">Cellphone</string>
    <string name="email">Email</string>
    <string name="prefiro_telefone">Prefer cellphone</string>
    <string name="prefiro_email">Prefer email</string>
    <string name="registrar">Login</string>
    <string name="manh">Morning</string>
    <string name="tarde">Afternoon</string>
    <string name="noite">Nigth</string>
</resources>